@@ -2342,3 +2342,50 @@ AT_CHECK([diff prog19.lst prog.lis], [0], [], [])
 AT_CLEANUP
 
 
+AT_SETUP([Variable format])
+AT_KEYWORDS([COBOL 2002 listing])
+
+AT_DATA([sed.txt],
+[s/@<:@0-9@:>@@<:@0-9@:>@:@<:@0-9@:>@@<:@0-9@:>@:@<:@0-9@:>@@<:@0-9@:>@ @<:@0-9@:>@@<:@0-9@:>@@<:@0-9@:>@@<:@0-9@:>@/HH:MM:SS YYYY/g
+])
+
+AT_DATA([prog.cob],
+[000010 IDENTIFICATION DIVISION.
+000020 PROGRAM-ID. prog.
+000030* blah blah blah
+000040 PROCEDURE DIVISION.
+000050                                                                  DISPLAY "Hello!"
+000060     .
+000070 END PROGRAM prog.
+])
+
+daymon=`date +"%a %b %e"`
+AT_CHECK([$COMPILE_ONLY -variable -t prog.lst prog.cob], [0], [], [])
+
+AT_DATA([prog20.lst],
+[GnuCOBOL 2.0.0   prog.cob                   DDD MMM dd HH:MM:SS YYYY  Page 0001
+
+LINE    PG/LN  A...B............................................................
+
+000001  000010 IDENTIFICATION DIVISION.
+000002  000020 PROGRAM-ID. prog.
+000003  000030* blah blah blah
+000004  000040 PROCEDURE DIVISION.
+000005  000050
+000005+ DISPLAY "Hello!"
+000006  000060     .
+000007  000070 END PROGRAM prog.
+GnuCOBOL 2.0.0   prog.cob                   DDD MMM dd HH:MM:SS YYYY  Page 0002
+
+SIZE TYPE           LVL  NAME                           PICTURE
+
+
+0 Warnings in program
+0 Errors in program
+])
+
+sed -e 's/'"$daymon"'/DDD MMM dd/g' -f sed.txt <prog.lst >prog.lis
+AT_CAPTURE_FILE(prog.lis)
+AT_CHECK([diff prog20.lst prog.lis], [0], [], [])
+
+AT_CLEANUP
